[package]
name = "nucleus"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
limine = "0.1.9"
spin = "0.9.3"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

